--- a/index.html
+++ b/index.html
@@ -8,5 +8,18 @@
   </head>
   <body>
     <!-- Your code here -->
+    <img
+    src="Pasted image.png"
+    alt="GC8 GANG"
+  />
+   <img
+   src="Pasted image (2).png"
+   alt="blue"
+   />
+   <img
+   src="Pasted image (3).png"
+   alt="another blue"
+   title="BOOST=LIFE"
+   />
   </body>
 </html>
